# raytrace_challenge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  gtesttest.cpp  tuples.cpp  tuples.h  unittests.cpp
.github/workflows/: ccpp.yml
renders/: 20191223130140.ppm  20191223130143.ppm
src/: app1.cpp  app2.cpp  app3.cpp  app4.cpp  app5.cpp  app6.cpp  app7.cpp  color.cpp  color.h  objrender.cpp  tuples.cpp  tuples.h  utils.cpp
src/include/: aabb.h  bvh.h  bvh_node.h  camera.h  canvas.h  color.h  cube.h  cylinder.h  group.h  hittable.h  hittable_list.h  light.h  material.h  matrix.h  objparser.h  pattern.h  plane.h  rays.h  shape.h  sphere.h  triangle.h  tuples.h  utils.h  world.h
src/modules/: aabb.cpp  bvh.cpp  camera.cpp  canvas.cpp  color.cpp  cube.cpp  cylinder.cpp  group.cpp  hittable_list.cpp  light.cpp  material.cpp  matrix.cpp  matrix_operators.cpp  objparser.cpp  pattern.cpp  plane.cpp  rays.cpp  shape.cpp  sphere.cpp  triangle.cpp  tuple_operators.cpp  tuples.cpp  utils.cpp  world.cpp
src/tests/: cameratests.cpp  canvastests.cpp  colortests.cpp  cubetests.cpp  cylindertests.cpp  grouptests.cpp  matrixtests.cpp  parsertests.cpp  patterntests.cpp  raytests.cpp  shadertests.cpp  transformationtests.cpp  triangletests.cpp  tupletests.cpp  utilstests.cpp  worldtests.cpp
